k8/selenium-hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  labels:
    app: selenium-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selenium-hub
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      containers:
      - name: selenium-hub
        image: selenium/hub:4.0.0-beta-1-prerelease-20210210
        ports:
          - containerPort: 4442
            name: "event-pub"
          - containerPort: 4443
            name: "event-sub"
          - containerPort: 4444
            name: "gui"
        resources:
          limits:
            memory: "1000Mi"
            cpu: ".5"
        livenessProbe:
          httpGet:
            path: /status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /status
            port: 4444
          initialDelaySeconds: 30
          timeoutSeconds: 5
