k8/selenium-hub-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  labels:
    app: selenium-hub
spec:
  ports:
  - port: 4442
    targetPort: 4442
    name: event-pub
  - port: 4443
    targetPort: 4443
    name: event-sub
  - port: 4444
    targetPort: 4444
    name: gui
  selector:
    app: selenium-hub
  type: NodePort
  sessionAffinity: None
