k8/selenium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-ingress
spec:
  rules:
    - host: selenium.grid.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selenium-hub
                port:
                  number: 4444
